# bioacoustic-data-synthesis

./: .gitignore  README.md  config_example.yaml  evaluation.py  main.py  pyproject.toml  requirements.txt  spectrogram_tools.py
bioacoustic_synthesis/: __init__.py  annotations.py  catalog.py  cli.py  config.py  dataset.py  interactive.py  spectrogram.py  synthesis.py  visualisation.py  waveform.py
classifiers/: check_rerun_variance.py  colors.py  compare_evaluation_metrics.py  eval_metrics.py  eval_real_life_roc.py  example_use_case.yaml  inference.py  kaytoo_small.py
example_input_dataset/negative/: tags.csv
example_input_dataset/noise/: tags.csv
example_input_dataset/vocalisations_xc/: tags.csv
synthesiser/: __init__.py  annotations.py  catalog.py  config.py  dataset.py  interactive.py  spectrogram.py  synthesis.py  visualisation.py  waveform.py
